# components

./: CMakeLists.txt
backends/: CMakeLists.txt
backends/simu/: CMakeLists.txt
backends/simu/simu_helper/: CMakeLists.txt  simu_helper.cc  simu_helper.h  simu_helper.yml
components/: CMakeLists.txt
components/bus/: interconnect.h
components/char/: CMakeLists.txt
components/char/pl011/: pl011.cc  pl011.h
components/generator/: generator.cc  generator.h
components/memory/: CMakeLists.txt  memory.cc  memory.h  memory.yml  test.cc
components/memory/test/: blob
components/rabbits/: bus_interconnect.h  bus_interconnect.yml  interconnect.h  interconnect_noc.h  interconnect_noc_impl.h  node.h  node_impl.h  platform_noc.cc  platform_noc.h
components/raspberry/gpio/: raspberry_gpio.yml
components/raspberry/it_ctrl/: raspberry_it_controller.yml
components/raspberry/system_timer/: raspberry_system_timer.yml
components/raspberry/timer/: raspberry_arm_timer.yml
components/raspberry/uart/: raspberry_uart.yml
components/raspberry/vcore/: vcore.yml
components/stub/: CMakeLists.txt  stub.cc  stub.h  stub.yml
plugins/bootloader/: CMakeLists.txt  bootloader.cc  bootloader.h  bootloader.yml
plugins/bootloader/arm/: bootloader.cc  bootloader.h
